logs/mobility/build.make.118.log.stderr
In file included from /home/steven/rover_workspace/src/mobility/src/SearchController.cpp:1:0:
/home/steven/rover_workspace/src/mobility/src/SearchController.h:19:41: error: expected primary-expression before ‘const’
 const static std::string stateNames[] = const {"SETTING_INITIAL_HEADING", "WAITING_FOR_MOMENTUM", "MOVING_TO_GOAL","REACHED_GOAL","REACHED_GOAL_PAUSE"};
                                         ^
/home/steven/rover_workspace/src/mobility/src/SearchController.h:19:41: error: invalid in-class initialization of static data member of non-integral type ‘const string [] {aka const std::basic_string<char> []}’
/home/steven/rover_workspace/src/mobility/src/SearchController.h:19:41: error: initializer invalid for static member with constructor
/home/steven/rover_workspace/src/mobility/src/SearchController.h:19:41: error: (an out of class initialization is required)
/home/steven/rover_workspace/src/mobility/src/SearchController.h:19:41: error: ‘SearchController::stateNames’ cannot be initialized by a non-constant expression when being declared
/home/steven/rover_workspace/src/mobility/src/SearchController.h:19:39: error: expected ‘;’ at end of member declaration
 const static std::string stateNames[] = const {"SETTING_INITIAL_HEADING", "WAITING_FOR_MOMENTUM", "MOVING_TO_GOAL","REACHED_GOAL","REACHED_GOAL_PAUSE"};
                                       ^
/home/steven/rover_workspace/src/mobility/src/SearchController.h:19:47: error: expected unqualified-id before ‘{’ token
 const static std::string stateNames[] = const {"SETTING_INITIAL_HEADING", "WAITING_FOR_MOMENTUM", "MOVING_TO_GOAL","REACHED_GOAL","REACHED_GOAL_PAUSE"};
                                               ^
make[2]: *** [CMakeFiles/mobility.dir/src/SearchController.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/steven/rover_workspace/src/mobility/src/mobility.cpp:24:0:
/home/steven/rover_workspace/src/mobility/src/SearchController.h:19:41: error: expected primary-expression before ‘const’
 const static std::string stateNames[] = const {"SETTING_INITIAL_HEADING", "WAITING_FOR_MOMENTUM", "MOVING_TO_GOAL","REACHED_GOAL","REACHED_GOAL_PAUSE"};
                                         ^
/home/steven/rover_workspace/src/mobility/src/SearchController.h:19:41: error: invalid in-class initialization of static data member of non-integral type ‘const string [] {aka const std::basic_string<char> []}’
/home/steven/rover_workspace/src/mobility/src/SearchController.h:19:41: error: initializer invalid for static member with constructor
/home/steven/rover_workspace/src/mobility/src/SearchController.h:19:41: error: (an out of class initialization is required)
/home/steven/rover_workspace/src/mobility/src/SearchController.h:19:41: error: ‘SearchController::stateNames’ cannot be initialized by a non-constant expression when being declared
/home/steven/rover_workspace/src/mobility/src/SearchController.h:19:39: error: expected ‘;’ at end of member declaration
 const static std::string stateNames[] = const {"SETTING_INITIAL_HEADING", "WAITING_FOR_MOMENTUM", "MOVING_TO_GOAL","REACHED_GOAL","REACHED_GOAL_PAUSE"};
                                       ^
/home/steven/rover_workspace/src/mobility/src/SearchController.h:19:47: error: expected unqualified-id before ‘{’ token
 const static std::string stateNames[] = const {"SETTING_INITIAL_HEADING", "WAITING_FOR_MOMENTUM", "MOVING_TO_GOAL","REACHED_GOAL","REACHED_GOAL_PAUSE"};
                                               ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
